<resources>
    <string name="app_name">App</string>
    <string name="car_image">Image de la voiture</string>
    <string name="notifications">Notifications</string>
    <string name="user_profile_picture">Photo de profil utilisateur</string>
    <string name="creer_une_reservation">Créer une réservation</string>
    <string name="nom_utilisateur">Nom Utilisateur</string>
    <string name="localisation">Localisation</string>
    <string name="confirmer_la_reservation">Confirmer la réservation</string>
    <string name="avec_chauffeur">Avec chauffeur</string>
    <string name="telephone_du_conducteur">Téléphone du conducteur</string>
    <string name="numero_de_permis">Numéro de permis</string>
    <string name="nom_du_conducteur">Nom du conducteur</string>
    <string name="lieu_de_retour">Lieu de retour</string>
    <string name="marque_et_modele">Marque et Modèle</string>
    <string name="reserver_maintenant">Réserver maintenant</string>
    <string name="ar_100_000_jour">Ar 100 000 /jour</string>
    <string name="locationcompany">LocationCompany</string>
    <string name="diesel">Diesel</string>
    <string name="_5_places">5 places</string>
    <string name="automatique">Automatique</string>
    <string name="suv">SUV</string>
    <string name="_2022">2022</string>
    <string name="confirmer_reservation">Confirmer la réservation</string>
    <string name="demandes_sp_ciales">Demandes spéciales</string>
    <string name="t_l_phone">Téléphone</string>
    <string name="nom_de_l_invit">Nom de l\'invité</string>
    <string name="nombre_d_invit_s">Nombre d\'invités</string>
    <string name="date_de_d_part">Date de départ</string>
    <string name="date_d_arriv_e">Date d\'arrivée</string>
    <string name="prix_nuit">Prix/nuit</string>
    <string name="titre_de_la_maison">Titre de la maison</string>
    <string name="chambres">Chambres</string>
    <string name="salles_de_bain">Salles de bain</string>
    <string name="invite">Invités</string>
    <string name="description">Description</string>
    <string name="quipements">Équipements</string>
    <string name="propri_taire">Propriétaire</string>
    <string name="phone">Téléphone</string>
    <string name="reservation">Réserver maintenant</string>
    <string name="aucune_r_servation">Aucune réservation</string>
    <string name="aucunereservation">Aucune réservation</string>
</resources>